# cp_matrices

./: .gitignore  AGENTS.md  PYTHON_PACKAGE_PLAN.md
draft_python/: .gitignore  README.md  pyproject.toml
draft_python/examples/: heat_circle_smoke.py
draft_python/src/cpmatrices/: __init__.py  bands.py  grid.py  indexing.py  interpolation.py  laplacian.py  surfaces.py
draft_python/tests/: test_bands.py  test_interpolation.py  test_laplacian.py  test_surfaces.py
examples/: README.txt  example_heat_csg_boolean_ops_configuration_summary.md  example_heat_csg_circle_boolean_ops.m  example_heat_csg_circle_boolean_ops_convergence.m  example_heat_csg_circle_union_angle_study.m  example_heat_csg_sphere_boolean_ops.m  example_heat_csg_two_circles.m  example_hole_ellipse_csg.m  example_l_shaped_manifold_heat_refinement_angle_rotation.m  example_v_shaped_manifold_heat_refinement.m  example_v_shaped_manifold_heat_refinement.md  example_v_shaped_manifold_heat_refinement_angle_rotation.md  example_v_shaped_manifold_heat_refinement_branch_cpm.m  example_v_shaped_manifold_poisson_branch_cpm.m
examples_2026/: angle2d.m  angle3D.m  example_two_bands_branch_rotation.m  example_two_sphere_intersection_icpm_rotation_convergence.m  example_v_shaped.m  test_example_two_bands_branch_rotation.m  test_example_two_sphere_intersection_icpm_rotation_convergence.m
examples_hody/: example_l_shaped_manifold_heat_refinement_angle_rotation.m  example_v_shaped_heat_no_cp_bar.m  example_v_shaped_manifold_heat_refinement.m  example_v_shaped_manifold_heat_refinement_angle_rotation.m
(+23 files in other folders)
